--- a/file-manager-cdk/package.json
+++ b/file-manager-cdk/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "file-upload-cdk",
+  "name": "file-manager-cdk",
   "version": "0.1.0",
   "bin": {
-    "file-upload-cdk": "bin/file-upload-cdk.js"
+    "file-manager-cdk": "bin/file-manager-cdk.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1025.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
